--- a/sass/phone.scss
+++ b/sass/phone.scss
@@ -127,7 +127,11 @@ $text-font: Roboto;
 
 
 @mixin dish-title {
+    width: 70%;
+    overflow: hidden;
+    text-overflow: ellipsis;
     h3 {
+        width: 250px;
         padding-bottom: 5px;
 
         font: {
@@ -139,6 +143,10 @@ $text-font: Roboto;
     }
 
     p {
+        width: 70%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         color: gray;
 
         font: {
@@ -249,12 +257,8 @@ $text-font: Roboto;
 
     .dish-wrap-palette {
         width: 130%;
-        // // overflow: hidden;
         display: flex;
-        // flex-direction: row;
         align-items: center;
-        // border-radius: 35px;
-        // // background-color: #fafafa;
         transition: width 1s ease-out 100ms;
 
         >.check {
@@ -266,7 +270,6 @@ $text-font: Roboto;
                 border: 1px solid $third-color;
                 transition: transform 1s ease-out 10ms;
                 margin: 30px;
-                // position: absolute;
             }
         }
 
@@ -287,11 +290,13 @@ $text-font: Roboto;
             width: 70%;
             padding-left: 30px;
             margin-right: 10px;
+            overflow: hidden;
+            white-space: nowrap;
 
             >p {
-                width: 70%;
+                width: 250px;
                 overflow: hidden;
-                white-space: nowrap;
+                // white-space: nowrap;
                 text-overflow: ellipsis;
             }
         }
