--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
+body {
+  padding: 0;
+  margin: 0;
+}
 
+.container {
+  animation-name: container;
+  animation-duration: 3s;
+}
+
+@keyframes container {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: hideLoading 2s forwards;
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  left: 35px;
+}
+
+@keyframes hideLoading {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
