--- a/css/style.css
+++ b/css/style.css
@@ -35,5 +35,135 @@ body {
     opacity: 0;
   }
 }
+.navigation {
+  width: 100%;
+}
+.navigation-link {
+  padding: 20px 0;
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+.navigation img {
+  align-items: center;
+}
+
+.search-btn-wrap {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9356DC;
+  padding: 35px 0;
+  box-shadow: rgba(11, 10, 10, 0.18) 0px 13px 12px 0px inset;
+}
+.search-btn-wrap input {
+  border: none;
+  background-color: #9356DC;
+  font-size: 25px;
+  font-family: Roboto;
+}
+.search-btn-wrap input::placeholder {
+  color: #000;
+}
+
+.fa-map-marker-alt {
+  font-size: 22px;
+  margin: 15px 15px 15px 130px;
+}
+
+.head {
+  background-color: #99E2D0;
+  text-align: center;
+  padding: 35px 0 60px 0;
+}
+.head h1 {
+  font-family: Roboto;
+  font-size: 30px;
+  font-weight: 700;
+}
+.head p {
+  padding: 25px 10px;
+  text-align: center;
+  color: gray;
+  font-family: Roboto;
+  font-size: 22px;
+}
+.head button {
+  background-color: #FF79DA;
+  padding: 25px 40px;
+  color: white;
+  border-radius: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  border: none;
+  align-items: center;
+  box-shadow: 1px 7px 10px 1px rgba(0, 0, 0, 0.15);
+}
+.head button:hover {
+  box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
+  transition-duration: 1s;
+  background-color: #fface8;
+}
+
+/* Section with the buttons for chosing the place 
+and prepare the menu*/
+.btns {
+  padding: 40px 10px 50px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.btns h2 {
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.btn-wrap {
+  width: 35%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: baseline;
+  background-color: #99E2D0;
+  border-radius: 23px;
+  margin: 25px 0 10px 10px;
+  box-shadow: -2px 6px 11px 2px rgba(0, 0, 0, 0.15);
+  font-size: 25px;
+}
+.btn-wrap:hover {
+  box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
+  transition-duration: 1s;
+  background-color: #c1ede2;
+}
+.btn-wrap span {
+  font-size: 20px;
+  border: 5px solid #9356DC;
+  color: white;
+  border-radius: 35px;
+  padding: 0 5px;
+  background-color: #9356DC;
+  margin: 0 10px 0 -10px;
+}
+.btn-wrap .fas {
+  font-size: 27px;
+  padding: 20px 0 20px 10px;
+}
+.btn-wrap .fa-mobile-alt {
+  color: gray;
+}
+.btn-wrap .fa-list {
+  color: gray;
+}
+.btn-wrap .fa-store {
+  color: #9356DC;
+}
+.btn-wrap p {
+  padding: 25px 0 25px 25px;
+  font-size: 22px;
+  font-weight: 700;
+  font-family: Roboto;
+}
 
 /*# sourceMappingURL=style.css.map */
