--- a/css/smart-phone.css
+++ b/css/smart-phone.css
@@ -14,7 +14,6 @@
     margin: 0;
   }
   .visible-dish-wrap {
-    width: 92%;
     background-color: #fff;
     border-radius: 30px;
     margin: 15px;
@@ -26,19 +25,18 @@
     transform: rotate(360deg);
   }
   .dish-wrap-palette {
-    width: 130%;
+    width: 145%;
     display: flex;
     align-items: center;
     transition: width 1s ease-out 100ms;
   }
   .dish-wrap-palette > .check .fa-check-circle {
-    font-size: 40px;
+    font-size: 35px;
     color: #fff;
     background-color: #99E2D0;
     border-radius: 50%;
     border: 1px solid #99E2D0;
     transition: transform 1s ease-out 10ms;
-    margin: 30px;
   }
   .dish-wrap-palette:hover {
     width: 100%;
@@ -48,15 +46,16 @@
   }
   .dish-wrap-palette .dish-info-palette {
     display: inline-block;
-    width: 70%;
-    padding-left: 30px;
-    margin-right: 10px;
+    width: 55%;
+    padding-left: 15px;
+    margin: 0 50px 0 10px;
     overflow: hidden;
     white-space: nowrap;
   }
   .dish-wrap-palette .dish-info-palette > p {
-    width: 250px;
+    width: 100%;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
   }
   .container {
@@ -382,46 +381,35 @@
     font-weight: 100;
   }
   .dish-palette {
-    width: 100%;
+    width: 72%;
+    display: flex;
+    align-items: center;
   }
   .dish-palette-price {
     vertical-align: super;
-  }
-  .dish-palette .fa-check-circle {
-    font-size: 40px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    border: 1px solid #99E2D0;
-    transition: transform 1s;
-    margin: 30px;
-    position: absolute;
-  }
-  .dish-palette .fa-check-circle:hover {
-    transform: rotate(360deg);
   }
   .dish-palette span {
     font-family: Roboto;
     font-size: 19px;
     font-weight: 600;
   }
-  .dish-info-palette {
-    width: 70%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
   .dish-info-palette h3 {
-    width: 250px;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     padding-bottom: 5px;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 500;
     font-family: Roboto;
     font-size: 25px;
     font-weight: 500;
   }
   .dish-info-palette p {
-    width: 70%;
+    width: 85%;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
     color: gray;
     font-family: Roboto;
     font-size: 19px;
@@ -434,7 +422,7 @@
     font-size: 19px;
     box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
     padding: 18px 85px;
-    margin: 45px 0 75px 135px;
+    margin: 45px 0 75px 35px;
   }
   .order:hover {
     cursor: pointer;
@@ -498,16 +486,16 @@
   .check {
     background-color: #99E2D0;
     border-radius: 0 25px 25px 0;
-    width: 140px;
-    height: 110px;
+    width: 100px;
+    height: 95px;
   }
   .fa-check-circle {
-    font-size: 40px;
+    font-size: 35px;
     color: #fff;
     background-color: #99E2D0;
     border-radius: 50%;
     transition: transform 1s;
-    margin: 35px;
+    margin: 28px 32px;
   }
   .heart {
     color: gray;
@@ -515,46 +503,35 @@
     font-weight: 100;
   }
   .dish-plate {
-    width: 100%;
+    width: 72%;
+    display: flex;
+    align-items: center;
   }
   .dish-plate-price {
     vertical-align: super;
-  }
-  .dish-plate .fa-check-circle {
-    font-size: 40px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    border: 1px solid #99E2D0;
-    transition: transform 1s;
-    margin: 30px;
-    position: absolute;
-  }
-  .dish-plate .fa-check-circle:hover {
-    transform: rotate(360deg);
   }
   .dish-plate span {
     font-family: Roboto;
     font-size: 19px;
     font-weight: 600;
   }
-  .dish-info-plate {
-    width: 70%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
   .dish-info-plate h3 {
-    width: 250px;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     padding-bottom: 5px;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 500;
     font-family: Roboto;
     font-size: 25px;
     font-weight: 500;
   }
   .dish-info-plate p {
-    width: 70%;
+    width: 85%;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
     color: gray;
     font-family: Roboto;
     font-size: 19px;
@@ -567,7 +544,7 @@
     font-size: 19px;
     box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
     padding: 18px 85px;
-    margin: 45px 0 75px 135px;
+    margin: 45px 0 75px 35px;
   }
   .order:hover {
     cursor: pointer;
@@ -634,46 +611,35 @@
     font-weight: 100;
   }
   .dish-bastille {
-    width: 100%;
+    width: 72%;
+    display: flex;
+    align-items: center;
   }
   .dish-bastille-price {
     vertical-align: super;
-  }
-  .dish-bastille .fa-check-circle {
-    font-size: 40px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    border: 1px solid #99E2D0;
-    transition: transform 1s;
-    margin: 30px;
-    position: absolute;
-  }
-  .dish-bastille .fa-check-circle:hover {
-    transform: rotate(360deg);
   }
   .dish-bastille span {
     font-family: Roboto;
     font-size: 19px;
     font-weight: 600;
   }
-  .dish-info-bastille {
-    width: 70%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
   .dish-info-bastille h3 {
-    width: 250px;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     padding-bottom: 5px;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 500;
     font-family: Roboto;
     font-size: 25px;
     font-weight: 500;
   }
   .dish-info-bastille p {
-    width: 70%;
+    width: 85%;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
     color: gray;
     font-family: Roboto;
     font-size: 19px;
@@ -686,7 +652,7 @@
     font-size: 19px;
     box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
     padding: 18px 85px;
-    margin: 45px 0 75px 135px;
+    margin: 45px 0 75px 35px;
   }
   .order:hover {
     cursor: pointer;
@@ -753,46 +719,35 @@
     font-weight: 100;
   }
   .dish-gourmand {
-    width: 100%;
+    width: 72%;
+    display: flex;
+    align-items: center;
   }
   .dish-gourmand-price {
     vertical-align: super;
-  }
-  .dish-gourmand .fa-check-circle {
-    font-size: 40px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    border: 1px solid #99E2D0;
-    transition: transform 1s;
-    margin: 30px;
-    position: absolute;
-  }
-  .dish-gourmand .fa-check-circle:hover {
-    transform: rotate(360deg);
   }
   .dish-gourmand span {
     font-family: Roboto;
     font-size: 19px;
     font-weight: 600;
   }
-  .dish-info-gourmand {
-    width: 70%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
   .dish-info-gourmand h3 {
-    width: 250px;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     padding-bottom: 5px;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 500;
     font-family: Roboto;
     font-size: 25px;
     font-weight: 500;
   }
   .dish-info-gourmand p {
-    width: 70%;
+    width: 85%;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
     color: gray;
     font-family: Roboto;
     font-size: 19px;
@@ -805,7 +760,7 @@
     font-size: 19px;
     box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
     padding: 18px 85px;
-    margin: 45px 0 75px 135px;
+    margin: 45px 0 75px 35px;
   }
   .order:hover {
     cursor: pointer;
