--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,46 @@ $third-color: #99E2D0;
 $main-font: Shrikhand;
 $text-font: Roboto;
 
+@mixin footer {
+    // background-color: #000;
+    // padding: 0 0 45px 0;
+
+    // h5 {
+    //     color: #fff;
+    //     font-family: $main-font;
+    //     font-size: 30px;
+    //     font-weight: 400;
+    //     // display: flex;
+    //     // padding: 40px 0 25px 35px;
+    // }
+
+    // .contacts {
+    //     text-decoration: none;
+    //     font-family: $text-font;
+
+    //     a {
+    //         text-decoration: none;
+    //         // display: flex;
+    //         // justify-content: flex-start;
+    //         color: #fff;
+    //         font-size: 20px;
+    //         // padding: 10px;
+    //         // margin: 0 30px;
+
+    //         .fa-handshake {
+    //             transform: rotate(-50deg);
+    //             font-size: 20px;
+    //             padding-right: 15px;
+    //         }
+
+    //         .fa-utensils {
+    //             padding-right: 20px;
+    //             font-size: 20px;
+    //         }
+    //     }
+    // }
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -147,78 +187,253 @@ body {
 
 // MAIN SECTION
 
-    /* Section with the buttons for chosing the place 
+/* Section with the buttons for chosing the place 
     and prepare the menu*/
 
-    .btns {
-        padding: 40px 10px 50px 15px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+.btns {
+    padding: 40px 10px 50px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-        h2 {
-            font: {
-                family: $text-font;
-                size: 40px;
-                weight: 700;
-            }
+    h2 {
+        font: {
+            family: $text-font;
+            size: 40px;
+            weight: 700;
+        }
+    }
+}
+
+.btn-wrap {
+    width: 35%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: baseline;
+    background-color: $third-color;
+    border-radius: 23px;
+    margin: 25px 0 10px 10px;
+    box-shadow: -2px 6px 11px 2px rgb(0 0 0 / 15%);
+    font-size: 25px;
+
+    &:hover {
+        box-shadow: -6px 20px 10px 1px rgb(0 0 0 / 15%);
+        transition-duration: 1s;
+        background-color: lighten($third-color, 10);
+    }
+
+    span {
+        font-size: 20px;
+        border: 5px solid #9356DC;
+        color: white;
+        border-radius: 35px;
+        padding: 0 5px;
+        background-color: #9356DC;
+        margin: 0 10px 0 -10px;
+    }
+
+    .fas {
+        font-size: 27px;
+        padding: 20px 0 20px 10px;
+    }
+
+    .fa-mobile-alt {
+        color: gray;
+    }
+
+    .fa-list {
+        color: gray;
+    }
+
+    .fa-store {
+        color: $primary-color;
+    }
+
+    p {
+        padding: 25px 0 25px 25px;
+
+        font: {
+            size: 22px;
+            weight: 700;
+            family: $text-font;
+        }
+    }
+}
+
+// Section of the restaurants 
+
+.rsts-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: #99E2D0;
+    padding: 15px 0 50px 0;
+    align-items: stretch;
+    flex-wrap: wrap;
+
+    h3 {
+        padding: 0px 1240px 10px 0px;
+
+        font: {
+            size: 25px;
+            family: $text-font;
+            weight: 700;
+        }
+
+    }
+
+
+}
+
+.rst-ad {
+    background-color: #fff;
+    border-radius: 18px;
+    /* margin: 20px; */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    a {
+        text-decoration: none;
+
+    }
+
+    span {
+        color: darkcyan;
+        background-color: #99E2D0;
+        font-size: 17px;
+        padding: 6px 30px;
+        font-family: Roboto;
+        font-weight: 700;
+        margin: 15px 0 0 -106px;
+        position: absolute;
+    }
+
+    img {
+        width: 320px;
+        border-radius: 18px 18px 0 0;
+    }
+}
+
+
+
+.ad-info {
+    position: relative;
+    // width: 100%;
+    margin: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.info {
+
+    h4 {
+        color: #000;
+        text-decoration: none;
+        padding: 2px 0;
+
+        font: {
+            family: $text-font;
+            size: 20px;
+            weight: 800;
+
         }
     }
 
-    .btn-wrap {
-        width: 35%;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: baseline;
-        background-color: $third-color;
-        border-radius: 23px;
-        margin: 25px 0 10px 10px;
-        box-shadow: -2px 6px 11px 2px rgb(0 0 0 / 15%);
-        font-size: 25px;
-
-        &:hover {
-            box-shadow: -6px 20px 10px 1px rgb(0 0 0 / 15%);
-            transition-duration: 1s;
-            background-color: lighten($third-color, 10);
+    p {
+        font: {
+            family: $text-font;
+            size: 20px;
+            weight: 400;
         }
 
-        span {
-            font-size: 20px;
-            border: 5px solid #9356DC;
-            color: white;
-            border-radius: 35px;
-            padding: 0 5px;
-            background-color: #9356DC;
-            margin: 0 10px 0 -10px;
-        }
-
-        .fas {
-            font-size: 27px;
-            padding: 20px 0 20px 10px;
-        }
-
-        .fa-mobile-alt {
-            color: gray;
-        }
-
-        .fa-list {
-            color: gray;
-        }
-
-        .fa-store {
-            color: $primary-color;
-        }
-
-        p {
-            padding: 25px 0 25px 25px;
-
-            font: {
-                size: 22px;
-                weight: 700;
-                family: $text-font;
-            }
-        }
+        color:grey;
     }
 
+}
 
+.main-heart1 {
+    font-size: 30px;
+    color: gray;
+    position: absolute;
+    left: 250px;
+    //  margin: 255px 410px; 
+    opacity: 1;
+}
+
+.main-heart2 {
+    width: auto;
+    font-size: 30px;
+    position: absolute;
+    left: 250px;
+    opacity: 0;
+    // margin: 255px 410px;
+
+    &:hover {
+        opacity: 1;
+        transition-duration: 1s;
+        color: lighten($primary-color, 5);
+    }
+
+}
+
+// FOOTER
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: baseline;
+    flex-wrap: wrap;
+    // @include footer;
+
+
+    background-color: #000;
+    padding: 0 0 45px 0;
+
+    h5 {
+        color: #fff;
+        font-family: $main-font;
+        font-size: 30px;
+        font-weight: 400;
+        // display: flex;
+        // padding: 40px 0 25px 35px;
+    }
+}
+
+.contacts {
+    text-decoration: none;
+    font-family: Roboto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+
+a {
+    text-decoration: none;
+    // display: flex;
+    // justify-content: flex-start;
+    color: #fff;
+    font-size: 20px;
+    // padding: 10px;
+    // margin: 0 30px;
+
+
+    .fa-handshake {
+        transform: rotate(-50deg);
+        font-size: 20px;
+        padding-right: 15px;
+    }
+
+    .fa-utensils {
+        padding-right: 20px;
+        font-size: 20px;
+    }
+
+}
+}
