--- a/sass/phone.scss
+++ b/sass/phone.scss
@@ -77,7 +77,7 @@ $text-font: Roboto;
 }
 
 @mixin dish {
-    width: 72%;
+    width: 74%;
     display: flex;
     align-items: center;
 
@@ -141,9 +141,12 @@ $text-font: Roboto;
     border: none;
     border-radius: 55px;
     font-size: 19px;
-    box-shadow: 1px 2px 14px 6px rgb(0 0 0 / 15%);
+    box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
     padding: 18px 85px;
-    margin: 45px 0 75px 35px;
+    margin: 50px 0 75px 90px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 
     &:hover {
         cursor: pointer;
@@ -479,10 +482,6 @@ $text-font: Roboto;
 
 
     // Section of the restaurants 
-
-    // .dish-palette {}
-
-
 
     .rsts-section {
         display: flex;
