--- a/css/style.css
+++ b/css/style.css
@@ -254,22 +254,18 @@ body {
 }
 
 footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: baseline;
-  flex-wrap: wrap;
   background-color: #000;
   padding: 0 0 45px 0;
 }
 footer h5 {
   color: #fff;
   font-family: Shrikhand;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 400;
+  padding: 45px 0 0 40px;
 }
-
-.contacts {
+footer .contacts {
+  width: 100%;
   text-decoration: none;
   font-family: Roboto;
   display: flex;
@@ -277,18 +273,21 @@ footer h5 {
   justify-content: space-evenly;
   align-items: center;
 }
-.contacts a {
+footer .contacts a {
   text-decoration: none;
   color: #fff;
   font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
-.contacts a .fa-handshake {
+footer .contacts a .fa-handshake {
   transform: rotate(-50deg);
   font-size: 20px;
-  padding-right: 15px;
+  padding: 15px 10px;
 }
-.contacts a .fa-utensils {
-  padding-right: 20px;
+footer .contacts a .fa-utensils {
+  padding-right: 13px;
   font-size: 20px;
 }
 
