--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,43 +5,50 @@ $main-font: Shrikhand;
 $text-font: Roboto;
 
 @mixin footer {
-    // background-color: #000;
-    // padding: 0 0 45px 0;
+    background-color: #000;
+    padding: 0 0 45px 0;
 
-    // h5 {
-    //     color: #fff;
-    //     font-family: $main-font;
-    //     font-size: 30px;
-    //     font-weight: 400;
-    //     // display: flex;
-    //     // padding: 40px 0 25px 35px;
-    // }
+    h5 {
+        color: #fff;
+        font-family: Shrikhand;
+        font-size: 35px;
+        font-weight: 400;
+        padding: 45px 0 0 40px;
+    }
 
-    // .contacts {
-    //     text-decoration: none;
-    //     font-family: $text-font;
 
-    //     a {
-    //         text-decoration: none;
-    //         // display: flex;
-    //         // justify-content: flex-start;
-    //         color: #fff;
-    //         font-size: 20px;
-    //         // padding: 10px;
-    //         // margin: 0 30px;
+    .contacts {
+        width: 100%;
+        text-decoration: none;
+        font-family: Roboto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
 
-    //         .fa-handshake {
-    //             transform: rotate(-50deg);
-    //             font-size: 20px;
-    //             padding-right: 15px;
-    //         }
 
-    //         .fa-utensils {
-    //             padding-right: 20px;
-    //             font-size: 20px;
-    //         }
-    //     }
-    // }
+        a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 20px;
+            display: flex;
+            flex-direction: row;
+            align-items: baseline;
+
+
+            .fa-handshake {
+                transform: rotate(-50deg);
+                font-size: 20px;
+                padding: 15px 10px;
+            }
+
+            .fa-utensils {
+                padding-right: 13px;
+                font-size: 20px;
+            }
+
+        }
+    }
 }
 
 body {
@@ -384,56 +391,5 @@ body {
 // FOOTER
 
 footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: baseline;
-    flex-wrap: wrap;
-    // @include footer;
-
-
-    background-color: #000;
-    padding: 0 0 45px 0;
-
-    h5 {
-        color: #fff;
-        font-family: $main-font;
-        font-size: 30px;
-        font-weight: 400;
-        // display: flex;
-        // padding: 40px 0 25px 35px;
-    }
-}
-
-.contacts {
-    text-decoration: none;
-    font-family: Roboto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-
-
-a {
-    text-decoration: none;
-    // display: flex;
-    // justify-content: flex-start;
-    color: #fff;
-    font-size: 20px;
-    // padding: 10px;
-    // margin: 0 30px;
-
-
-    .fa-handshake {
-        transform: rotate(-50deg);
-        font-size: 20px;
-        padding-right: 15px;
-    }
-
-    .fa-utensils {
-        padding-right: 20px;
-        font-size: 20px;
-    }
-
-}
+    @include footer;
 }
